Wireshark gives decoding error during rnsap message dissection(SCCP reassembly)
This issue was migrated from bug 3360 in our old bug tracker.
Original bug information:
Reporter: Tapas Chatterjee
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Red Hat
Platform: x86
Version: 1.0.4
Attachments:
sccp_reasseble_1.pcap: SCCP message failed to reassemble
rnsap_error.cap: The capture file gives rnsap decoding error
See also:
Issue #11130 (closed)
Issue #13651 (closed)
Issue #4012